hphp/hack/test/typecheck/infinite_loop_terminal_bad.php.exp
File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
Invalid return type (Typing[4110])
File "infinite_loop_terminal_bad.php", line 3, characters 15-17:
This is an int
File "infinite_loop_terminal_bad.php", line 3, characters 10-10:
It is incompatible with void because this function implicitly returns void
