hphp/hack/test/typecheck/infinite_loop_terminal_bad.php
<?hh

function f(): int {
  while (true) {
    break;
  }
}
